dev7-doga-parser/src/main/java/jp/dev7/enchant/doga/parser/pose/pose.jjt
options {
    STATIC = false;
    MULTI = true;
    VISITOR = true;
    NODE_EXTENDS = "jp.dev7.enchant.doga.parser.BaseNode";
}

PARSER_BEGIN(PoseParser)
package jp.dev7.enchant.doga.parser.pose;
public class PoseParser {
}
PARSER_END(PoseParser)

SKIP:
{
    " " | "\r" | "\t" | "\n"
}

MORE: { "/*": COMMENT_TEXT }
<COMMENT_TEXT> SPECIAL_TOKEN: { <COMMENT: "*/">: DEFAULT }
<COMMENT_TEXT> MORE: { < ~[] > }

TOKEN:
{
        <LABELLED: "labelled">
    |   <MOVE: "move">
    |   <ROT: "rot">
    |   <SELECTIVE: "selective">
    |   <NORMAL: "normal">
    |   <CM: ":">
    |   <DQ: "\"">
    |   <DATA_START: "(">
    |   <DATA_END: ")">
    |   <NUM: ("-")?(["0"-"9"])+("."(["0"-"9"])+)?(("E-")(["0"-"9"])+)?>
    |   <NAME: [         "a"-"z", "A"-"Z", "_", "#", ".", ":", "-", "\u3040"-"\u309f", "\u30a0"-"\u30ff", "\u4e00"-"\u9fff", "\uff10"-"\uff19", "\uff21"-"\uff3a", "\uff41"-"\uff5a", "\uff1f", "\uff01", "\uff08", "\uff09"]
              (["0"-"9", "a"-"z", "A"-"Z", "_", "#", ".", ":", "-", "\u3040"-"\u309f", "\u30a0"-"\u30ff", "\u4e00"-"\u9fff", "\uff10"-"\uff19", "\uff21"-"\uff3a", "\uff41"-"\uff5a", "\uff1f", "\uff01", "\uff08", "\uff09"])*>
}

ASTStart Start():
{}
{
    Pose() { return jjtThis; }
}

void Pose():
{}
{
    <NUM><CM>
    Name()
    <DATA_START>
    <LABELLED> <NUM>
    (UnitPose())*
    <DATA_END>
}

void UnitPose():
{}
{
    <DATA_START>
    Name()
    <MOVE> <DATA_START> Num() Num() Num() <DATA_END>
    <ROT> <DATA_START> Num() Num() Num() <DATA_END>
    (<SELECTIVE> <DATA_START> <NORMAL> Num() Num() <DATA_END>)?
    <DATA_END>
}

void Name():
{
    Token t;
}
{
    (<DQ>)? t = <NAME> (<DQ>)? 
    {
        jjtThis.nodeValue = t.image;
    }
}

void Num():
{
    Token t;
}
{
    t = <NUM>
    {
        jjtThis.nodeValue = t.image;
    }
}
